--- a/src/question/23.08.15.md
+++ b/src/question/23.08.15.md
@@ -82,7 +82,7 @@
 11. 用什么方式实现多线程
 12. 拒绝策略有哪些
 13. 线程安全的 List 和 Map
-14. 说说 concurrentHashMap
+14. 说说 ConcurrentHashMap
 15. Java 的双亲委派
 16. 打破双亲委派的方式
 17. Java 的 SPI
