--- a/src/question/23.08.28.md
+++ b/src/question/23.08.28.md
@@ -13,7 +13,7 @@
    1. Redis 中不存储重要数据，就算丢失也无所谓
    2. 先删数据库，再更新 Redis
    3. 延迟双删。
-5. 讲一下 HashMap
+5. [讲一下 HashMap](/java-interview/java.html#集合)
    分 1.7 和 1.8 讲
    数组+链表 数组+链表+红黑树（链表长度大于 8，且数组长度大于 64 变成红黑树）
    1.7 并发扩容头插存在死循环 
