--- a/src/question/23.08.29.md
+++ b/src/question/23.08.29.md
@@ -5,7 +5,7 @@
 1. 自我介绍
 2. 项目 (10分钟)
 3. 对封装. 继承. 多态怎么理解的?
-4. Java 的集合类有哪些?
+4. [Java 的集合类有哪些?](/java-interview/java.html#集合)
 5. ArrayList 和 LinkedList 的区别?
 6. HashMap 说一下? (初始化，put 流程，扩容)
 7. 说下 JVM 的运行时数据区(各部分存储内容)
