--- a/src/question/23.08.30.md
+++ b/src/question/23.08.30.md
@@ -7,7 +7,7 @@
 3. 为什么使用 ES 去优化 MySQL 查询? MySQL 模糊查询问题?
 4. Spring Boot 的特点?
 5. Spring Boot 的 starter?
-6. Spring 的容器启动和 Bean 加载(被打断说问循环依赖和三级缓存是啥)
+6. Spring 的容器启动和 [Bean 加载](/java-interview/spring.html#bean-的生命周期)（被打断说问循环依赖和三级缓存是啥）
 7. 使用过 Spring 后置处理器吗，后置处理器可以拿来干嘛?
 8. 一道算法题。先减后增求最小值
 类似于 [LCR 069，山脉数组的峰顶索引](https://leetcode.cn/problems/B1IidL/description/)
