--- a/src/question/23.08.31.md
+++ b/src/question/23.08.31.md
@@ -24,7 +24,7 @@
 1. Java 有哪些集合
 2. ArrayList 和 LinkedList 区别
 3. 请介绍一下 Spring 的 AOP 和 IoC
-4. 请介绍一下 Spring 的 Bean 生命周期
+4. [请介绍一下 Spring 的 Bean 生命周期](/java-interview/spring.html#bean-的生命周期)
 5. 介绍项目
 6. 一个 SpringBoot 项目中的常见注解
 7. SpringBoot 项目怎么使用事务，流程是怎么样
