--- a/src/question/23.08.29.md
+++ b/src/question/23.08.29.md
@@ -12,7 +12,7 @@
 8. 说一下垃圾回收算法
 9. 线程池的参数和执行任务流程
 10. 简单说一下 CAP 理论
-11. Spring Bean 加载的过程
+11. [Spring Bean 加载的过程](/java-interview/spring.html#bean-的生命周期)
 12. 说一下 MySQL 索引有哪些?
 13. MQ 的消息重复消费和消息堆积问题的解决思路
 14. 反问:
