--- a/src/question/23.09.04.md
+++ b/src/question/23.09.04.md
@@ -5,7 +5,7 @@
    - 宠物抽象类，猫、狗实现类（属性：名称、速度），十米赛跑，比赛开始做日志打印，到达终点做日志打印
      例：14:01:11 比赛开始，14:01:13 汤姆猫（5m/s）到达，14:01:16 旺财（2m/s）到达（题目用的是真实时间）
 2. 项目拷打
-3. Spring Bean 的生命周期
+3. [Spring Bean 的生命周期](/java-interview/spring.html#bean-的生命周期)
 4. 在初始化 Bean 前如何修改 Bean 的属性覆盖原本要初始化的属性
 5. Git 命令，提交撤回
 6. 反问：
